--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "effector-react": "^23.1.0",
     "effector-storage": "^7.0.0",
     "lodash": "^4.17.21",
+    "moment": "^2.30.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.49.3",
